about section title width and scrollbar fix for other browsers

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -272,6 +272,8 @@ COMPONENTS
   width: 100%;
   color: $dark-text;
   overflow-y: scroll;
+  -ms-overflow-style: none; // IE 10+
+  overflow: -moz-scrollbars-none; // Firefox
 }
 
 //  re-useable
