--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -512,7 +512,7 @@
   .about {
     .section-header {
       .section-title {
-        width: 420px;
+        width: 435px;
         font-size: 4.5em;
       }
     }
